trunk/Archive/880bde810cebedd18bdf96d819a0b89c-f674c1a6d04c632b71a62362c0ccfc51/output
main.cpp: In member function ‘void A::call_swap(A&)’:
main.cpp:7:9: error: ‘::swap’ has not been declared
         ::swap(*this, other); // note the scope operator
         ^
